php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49630 imap_listscan function missing
Submitted: 2009-09-22 17:44 UTC Modified: 2009-09-22 18:19 UTC
From: olivier at oxeva dot fr Assigned: felipe (profile)
Status: Closed Package: IMAP related
PHP Version: 5.2, 5.3 and HEAD OS: all
Private report: No CVE-ID: None
 [2009-09-22 17:44 UTC] olivier at oxeva dot fr
Description:
------------
The PHP function imap_listscan() is missing:

Fatal error: Call to undefined function imap_listscan() in /***/test.php on line 3


The function exists in documentation:
http://fr.php.net/imap_listscan

The function exists in sourcecode:
http://svn.php.net/viewvc/php/php-src/branches/PHP_5_3/ext/imap/php_imap.c?view=markup (line 1862)






Reproduce code:
---------------
<?php

$stream_id = imap_open('localhost', 'me@me.com', 'boum@boum.com') or 
	die("Cannot connect to mailbox $default_mailbox: " . imap_last_error());

imap_listscan($stream_id,$default_mailbox,'INBOX');

imap_close($stream_id);


Expected result:
----------------
Function is at least found :)

Actual result:
--------------
Fatal error: Call to undefined function imap_listscan() in /***/imap_listscan_basic.php on line 3

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-09-22 18:18 UTC] svn@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=288585
Log: - Fixed bug #49630 (imap_listscan function missing)
# Missing PHP_FE(), though nowdays it is used through of two aliases. (imap_scan() and imap_scanmailbox())
 [2009-09-22 18:19 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.2, 5.3 and HEAD.
 [2009-10-09 17:38 UTC] svn@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=289435
Log: - Merge:  Fixed bug #49630 (imap_listscan function missing)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 17:00:01 2026 UTC