- Fixed bug #49630 (imap_listscan function missing) # Missing PHP_FE(), though nowdays it is used through of two aliases. (imap_scan() and imap_scanmailbox())